tests/samples/negative/functions/lambda_reference_capture.ax
module lambda_reference_capture;

fn main() -> i32 {
    let value: i32 = 1;
    let read = [&value]() -> i32 {
        return value;
    };
    return read();
}
